tests/specs/ecosystem/http/fns/0_6_1.test
http/fns/0.6.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.218.2": "jsr:@std/assert@0.218.2",
      "jsr:@std/cli@^0.218.2": "jsr:@std/cli@0.218.2",
      "jsr:@std/encoding@^0.218.2": "jsr:@std/encoding@0.218.2",
      "jsr:@std/fmt@^0.218.2": "jsr:@std/fmt@0.218.2",
      "jsr:@std/http@0.218": "jsr:@std/http@0.218.2",
      "jsr:@std/media-types@^0.218.2": "jsr:@std/media-types@0.218.2",
      "jsr:@std/path@0.218": "jsr:@std/path@0.218.2",
      "jsr:@std/path@^0.218.2": "jsr:@std/path@0.218.2",
      "jsr:@std/streams@^0.218.2": "jsr:@std/streams@0.218.2"
    },
    "jsr": {
      "@std/assert@0.218.2": {
        "integrity": "7f0a5a1a8cf86607cd6c2c030584096e1ffad27fc9271429a8cb48cfbdee5eaf"
      },
      "@std/cli@0.218.2": {
        "integrity": "7877f41b4369f51b2ee06132b678ceee703051671c0fcea9058c1c0242652098",
        "dependencies": [
          "jsr:@std/assert@^0.218.2"
        ]
      },
      "@std/encoding@0.218.2": {
        "integrity": "da55a763c29bf0dbf06fd286430b358266eb99c28789d89fe9a3e28edecb8d8e"
      },
      "@std/fmt@0.218.2": {
        "integrity": "99526449d2505aa758b6cbef81e7dd471d8b28ec0dcb1491d122b284c548788a"
      },
      "@std/http@0.218.2": {
        "integrity": "54223b62702e665b9dab6373ea2e51235e093ef47228d21cfa0469ee5ac75c9b",
        "dependencies": [
          "jsr:@std/cli@^0.218.2",
          "jsr:@std/encoding@^0.218.2",
          "jsr:@std/fmt@^0.218.2",
          "jsr:@std/media-types@^0.218.2",
          "jsr:@std/path@^0.218.2",
          "jsr:@std/streams@^0.218.2"
        ]
      },
      "@std/media-types@0.218.2": {
        "integrity": "1ed3bd2a05e44bad3fc2bab1767d0ce7f2fd68baee62a980751ce51633acb788"
      },
      "@std/path@0.218.2": {
        "integrity": "b568fd923d9e53ad76d17c513e7310bda8e755a3e825e6289a0ce536404e2662",
        "dependencies": [
          "jsr:@std/assert@^0.218.2"
        ]
      },
      "@std/streams@0.218.2": {
        "integrity": "2af3cab7bb4364575e8616fd36e8df69c5b2ff49b25c5b865c26178e7da2c096",
        "dependencies": [
          "jsr:@std/assert@^0.218.2"
        ]
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
    at file://<tmpdir>/lib/hosting/init_deploy.ts:4:222

TS2724 [ERROR]: 'Deno' has no exported member named 'ServeTlsOptions'. Did you mean 'ServeOptions'?
    at file://<tmpdir>/lib/hosting/init_localhost.ts:4:233

Found 2 errors.

error: Type checking failed.

